# tempmon

./: .gitignore  requirements.txt  setup.cfg
sql/: database.sql
src/tempmon/: __main__.py  button.py  cli.py  device.py  mailer.py  metric.py  notification_handler.py  pg_sink.py  sink.py
src/tempmon/cli/: tempmon.py  tempmoncli.py
tests/: test_device.py
