[metadata]
name = tempmon
version = 0.1
description = Temperature monitoring
long_description = file: README.md
long_description_content_type = text/markdown
author = horzsolt
url = https://github.com/horzsolt/tempmon
keywords = bluetooth python
classifiers =
    Development Status :: 1 - Beta
    Operating System :: Linux only
    Programming Language :: Python

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.10

install_requires =
  psycopg2-binary
  bluepy
  retry
  mock

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    tempmon = tempmon.cli:run
